--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap');
+
 :root {
     --bg-color: #292931;
     --button: #121216;
@@ -12,10 +14,12 @@ body {
   box-sizing: border-box;
   background-color: var(--bg-color);
   color: var(--text);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .page-container {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     justify-content: center;
     align-items: center;
@@ -25,6 +29,11 @@ section {
     display: flex;
     justify-content: space-around;
     min-width: 24rem;
+    margin: 2rem 1rem;
+}
+
+section div {
+    margin-inline: 1rem;
 }
 
 button {
@@ -41,4 +50,20 @@ button {
 
 button:hover {
     border-color: var(--highlight);
+}
+
+.results {
+    min-width: 420px;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* font-family: 'Pixelify Sans', cursive; */
+}
+
+.results div {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    /* border: 1px solid green; */
 }
